--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
             android:label="@string/title_activity_maps" />
         <activity android:name=".book_new" />
+        <activity android:name=".Splash"/>
 
         <activity android:name=".MainActivity"
             android:label="Co-Working Spaces"></activity>
